--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,6 +12,8 @@
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
 
+          <li><%= link_to "About", about_path %></li>
+
         <% if !user_signed_in? %>
           <li><%= link_to "Log In", new_user_session_path %></li>
           <li><%= link_to "Sign Up", new_user_registration_path %></li>
@@ -35,8 +37,9 @@
           <li role="separator" class="divider"></li>
           <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
         </ul>
-
       </li>
+    
+
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.email %> <span class="caret"></span></a>
 
