--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,8 +1,22 @@
+<div class="alert alert-danger" role="alert">
+  <%= @event.errors.full_messages.first if @event.errors.any?%>
+</div>
+
 <%= form_for @event do |f| %>
 
   <div class="form-group">
     <label>Name</label>
     <%= f.text_field :name, placeholder: "Event name", class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <label>Description</label>
+    <%= f.text_field :description, placeholder: "Description", class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <label>Location</label>
+    <%= f.text_field :location, placeholder: "Location", class: "form-control" %>
   </div>
 
   <div class="form-group">
