--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -3,15 +3,13 @@
 
   <div class="panel-body">
 
-    <h4>Location:</h4> <p><%= @event.location %></p>
     <h4>Host: </h4> <p><%= @event.user.email %></p>
+    <h4>Location:</h4> <p><%= @event.location %></p>
 
     <!-- Main Info -->
     <h4>Main Info</h4>
     <p>Event Name: <%= @event.name %></p>
-    <!-- <p><%= !@event.description ? ("<s>Description</s>").html_safe : "Open event" %></p> -->
-    <!-- <p><%= @event.capacity ? "Capacity" : "test" %></p> -->
-    <p><%= !@event.capacity ? ("<s>Capacity</s>").html_safe : "Capacity 100 people" %></p>
+    <p><%= !@event.capacity ? ("<s>Capacity</s>").html_safe : "Capacity: " + @event.capacity.to_s %></p>
 
     <!-- About -->
     <h4>About</h4>
@@ -22,9 +20,9 @@
     <ul class="details">
       <li><%= !@event.includes_food ? ("<s>Food</s>").html_safe : "Foods included" %></li>
       <li><%= !@event.includes_drinks ? ("<del>Drinks</del>").html_safe : "Drinks included" %></li>
-      <li><%= !@event.starts_at ? ("<del>12/12/2017</del>").html_safe : "12/12/2017" %></li>
-      <li><%= !@event.ends_at ? ("<del>14/12/2017</del>").html_safe : "End Date" %></li>
-      <li><%= !@event.price ? ("<del>80.0</del>").html_safe : "Ticket price 80.0 euro" %></li>
+      <li><%= !@event.starts_at ? ("<del>12/12/2017</del>").html_safe : "Start date: " + @event.starts_at.to_s %></li>
+      <li><%= !@event.ends_at ? ("<del>14/12/2017</del>").html_safe : "End Date: " + @event.ends_at.to_s%></li>
+      <li><%= !@event.price ? ("<del>80.0</del>").html_safe : "Ticket price: " + @event.price.to_s%></li>
     </ul>
 
   </div>
