--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -29,10 +29,18 @@
 
 </div>
 
-<%= link_to "Back", events_path, class: "btn btn-default" %>
-
 <!-- categories -->
 <h4>Categories</h4>
 <% @categories.each do |category| %>
   <span class="label label-success"><%= category.name %></span>
 <% end %>
+  <!-- Photos -->
+<h4>Photos</h4>
+<% @event.photos.each do |photo| %>
+  <%= image_tag photo.image %>
+
+<% end %>
+
+<hr />
+
+<%= link_to "Back", events_path, class: "btn btn-default" %>
