Create Photo: Views

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -2,7 +2,7 @@
   <%= @event.errors.full_messages.first if @event.errors.any?%>
 </div>
 
-<%= form_for @event do |f| %>
+<%= form_for @event, html: { multipart: true } do |f| %>
 
   <div class="form-group">
     <label>Name</label>
@@ -62,3 +62,16 @@
     <%= f.submit "Save", class: "btn btn-primary" %>
   </div>
 <% end %>
+
+<label>Photos</label>
+
+<div class="form-group">
+  <span class="btn btn-default">
+    Upload Photos
+    <%= file_field_tag "images[]", type: :file, multiple: true %>
+  </span>
+</div>
+
+<div id="photos">
+  <%= render 'photos/list' %>
+</div>
