--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -20,7 +20,7 @@
           <div class="col-md-3 right">
             <%= link_to "View", event, class: "btn btn-default" %>
             <%= link_to "Update", edit_event_path(event), class: "btn btn-default" %>
-            <%= link_to "[Delete]", event_path(@event.id), method: :delete, data: { confirm: "Are you sure?" } %>
+            <%= link_to "Delete", event_path(event), method: :delete, data: { confirm: "Are you sure?" }%>
           </div>
         </div>
         <% end %>
